# cpp-gui-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/controller/: application.hpp  project.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/controller/: project.cpp
tst/: CMakeLists.txt  test.cpp
